Preventing scrolling on mobile devices

--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;	/* hide scrollbar scroll */
+	width: 100%;
+	height: 100%;
+	position: fixed;
 }
 
 canvas {
